@@ -1,5 +1,9 @@
 2013-08-05  Roland McGrath  <roland@hack.frob.com>
 
+	* resolv/res_send.c (send_dg): Don't try to use ioctl unless [FIONREAD].
+
+2013-08-05  Roland McGrath  <roland@hack.frob.com>
+
 	* resolv/res_hconf.c [!NOT_IN_libc] (ifaddrs): Declare
 	only under [SIOCGIFCONF && SIOCGIFNETMASK].
 
